# real_selection

./: .gitignore  .tool-versions  LICENSE  README.md  pyproject.toml
.dev_docs/: GITIGNORE_REVIEW.md  IMPLEMENTACAO.md  estrutura.txt
docs/: ARQUITETURA.md  CONFIGURACAO.md  DESENVOLVIMENTO.md  PLANO_IMPLEMENTACAO.md  README_LER_SELECAO.md  VOZES.md
integrations/: HYPRLAND_CONFIG.md  hyprland_binds.conf
scripts/: tts_kill.sh  tts_wrapper.sh
src/real_selection/: __init__.py  clipboard.py  main.py
tests/: test_audio_output.py  test_dependencies.py  test_edge_cases.py  test_gpu_pipeline.py  test_pyaudio_stream.py  test_selection.py  test_threading.py
