[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "Real Selection"
version = "0.1.0"
description = "A tool to read selected text using Kokoro TTS with real-time streaming and GPU acceleration."
readme = "README.md"
license = { file = "LICENSE" }
authors = [
    { name="Renato Barros", email="falecomrenatobarros@gmail.com" }
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Operating System :: POSIX :: Linux"
]
requires-python = ">=3.10, <3.14"
dependencies = [
    "kokoro>=0.9.4",
    "pyaudio>=0.2.13"
]

[project.urls]
Homepage = "https://github.com/renatobarros-ai/real_selection"
Repository = "https://github.com/renatobarros-ai/real_selection"

[project.scripts]
real_selection = "real_selection.main:main"
